# QT_study

./: .gitignore
06_PreConcurrent/: mainwindow.cpp  mainwindow.h
2_main_Qt_modules/: CMakeLists.txt  main.cpp
3_Qt_designer/: .f_dbconnect.cpp  .f_dbconnect.h  .f_dbconnect.ui  CMakeLists.txt  f_dbconnect.cpp  f_dbconnect.h  f_dbconnect.ui  mainwindow.cpp  mainwindow.ui
4_widgets/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
5_SlotsSignals/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  stopwatch.cpp  stopwatch.h
5_SlotsSignals/5_SlotsSignals/: mainwindow.cpp
6_concurent/: CMakeLists.txt
